--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@ layout: default
 title: Posts
 ---
 
-<a href="feed.xml">RSS Feed</a>
+<p><a href="feed.xml">RSS Feed</a></p>
 
 {%- if site.posts.size > 0 -%}
   <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
