Absolute path to assets folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <p>Phone: {{ site.data.contact.phone }}</p>
     <p>Email: <a href="mailto:{{ site.data.contact.email }}">{{ site.data.contact.email }}</a></p>
     <p>GitHub: <a href="https://github.com/{{ site.data.contact.github }}">github.com/{{ site.data.contact.github }}</a></p>
-    <p>Resume: <a href="assets/resume.pdf">resume.pdf</a></p>
+    <p>Resume: <a href="/assets/resume.pdf">resume.pdf</a></p>
     <!-- <p>Address:</br>{{ site.data.contact.address }}</p> -->
   </div>
 
