Correct "last updated"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
     
     <p>Aside from the enjoyment I derive from its practice, my enthusiasm for computer science comes from its potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I choose to conduct my work in a way that aligns with principles of democracy, privacy, sustainability, and respect for human rights.</p>
     
-    <p>This page was last updated January 1, 2020.</p>
+    <p>This site was last updated January 22, 2020.</p>
   </div>
 
 </div>
