--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-  <img style="float:left;width:200px;margin-right:30px;margin-bottom:20px" src="/assets/headshot.jpg" alt="headshot"/>
-  <div style="overflow:hidden;min-width:max-content">
+  <img src="/assets/headshot.jpg" alt="headshot" id="headshot"/>
+  <div id="contact">
     <h2>Information</h2>
     <table class="invisible-table">
       <tr><td>Phone</td><td>{{ site.data.contact.phone }}</td></tr>
@@ -16,7 +16,7 @@ layout: default
     </table>
   </div>
 
-  <div style="clear:left">
+  <div id="summary">
     <h2>Summary</h2>
 
     <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests are broadly in computer vision, graphics, and machine learning. During the 2018-2019 academic year I was jointly advised by Jignesh Patel and Kevin Eliceiri. Since fall 2019 I have been advised by Mohit Gupta.</p>
