Add quotes to image size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <img src="/assets/headshot.jpg" alt="headshot" width=200 height=200 id="headshot"/>
+  <img src="/assets/headshot.jpg" alt="headshot" width="200" height="200" id="headshot"/>
   <div id="contact">
     <h2>Information</h2>
     <table class="invisible-table">
