--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@ layout: default
 
   <img src="/assets/headshot.jpg" alt="headshot" width="170" height="170" id="headshot"/>
   <div id="contact">
-    <h2>Information</h2>
+    <h2>Contact</h2>
     <table class="invisible-table">
       <tr><td>Phone</td><td>(608) 440-4434</td></tr>
       <tr><td>Email</td><td><a href="mailto:dutson@wisc.edu">dutson@wisc.edu</a></td></tr>
       <tr><td>GitHub</td><td><a href="https://github.com/mattdutson">mattdutson</a></td></tr>
-      <tr><td colspan="2"><a href="/assets/cv.pdf">Curriculum Vitae</a></td></tr>
-      
     </table>
   </div>
 
   <div id="summary">
-    <h2>Statement</h2>
+    <h2>About</h2>
 
     <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests are broadly in computer vision, computer graphics, and machine learning. Since fall 2019 I have been advised by Mohit Gupta. I'm currently conducting research in neuromorphic sensing and computing.</p>
       
