--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
   <div id="summary">
     <h2>About</h2>
 
-    <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests are broadly in computer vision, computer graphics, and machine learning. Since fall 2019 I have been advised by Mohit Gupta. I'm currently conducting research in neuromorphic sensing and computing.</p>
+    <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests are broadly in computer vision, computer graphics, and machine learning. Since fall 2019 I have been advised by Mohit Gupta. My current research is in neuromorphic sensing and computing.</p>
       
     <p>In 2018 I graduated magnum cum laude from the University of Utah with an honors BS in physics. The topic of my thesis was <a href="/assets/utah_thesis.pdf">Reconstruction of Cosmic Ray Geometry Using Cherenkov Backscattering</a>, supervised by Douglas Bergman.</p>
     
