--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@ layout: default
   </div>
 
   <div id="summary">
-    <h2>About</h2>
+    <h2>Summary</h2>
 
-    <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests include computer vision, computer graphics, and machine learning. Since fall 2019 I have been advised by Mohit Gupta. My current research is in neuromorphic sensing and computing.</p>
+    <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests include computer vision, computer graphics, and machine learning. Since fall 2019 I've been advised by Mohit Gupta. My current research is on single-photon sensing and neuromorphic computing.</p>
     
-    <p>In 2018 I graduated magnum cum laude from the University of Utah with an honors BS in physics. The topic of my thesis was <a href="/assets/utah_thesis.pdf">Reconstruction of Cosmic Ray Geometry Using Cherenkov Backscattering</a>, supervised by Douglas Bergman.</p>
-    
-    <p>Aside from the enjoyment I derive from its practice, my enthusiasm for computer science comes from its potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I choose to conduct my work in a way that aligns with principles of democracy, privacy, sustainability, and respect for human rights.</p>
+    <p>I believe that computer science has great potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I choose to conduct my work in a way that is consistent with principles of democracy, privacy, and human rights.</p>
   </div>
 
 </div>
