--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ layout: default
     <h2>Contact</h2>
     <table class="invisible-table">
       <tr><td>Phone</td><td>(608) 440-4434</td></tr>
-      <tr><td>Email</td><td><a href="mailto:dutson@wisc.edu">dutson@wisc.edu</a></td></tr>
+      <!-- Email obfuscated using http://www.wbwip.com/wbw/emailencoder.html -->
+      <tr><td>Email</td><td><a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a></td></tr>
       <tr><td>GitHub</td><td><a href="https://github.com/mattdutson">mattdutson</a></td></tr>
     </table>
   </div>
