Update intro blurb

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: default
   <div id="summary">
     <h2>Summary</h2>
 
-    <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests include computer vision, computer graphics, and machine learning. Since fall 2019 I've been advised by Mohit Gupta. My current research is on single-photon sensing and neuromorphic computing.</p>
+    <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests include computer vision, computer graphics, and machine learning. Since fall 2019 I've been advised by Mohit Gupta. My current research is in single-photon sensing (SPADs) and spiking neural networks.</p>
     
-    <p>I believe that computer science has great potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I choose to conduct my work in a way that is consistent with principles of democracy, privacy, and human rights.</p>
+    <p>I believe that computer science has great potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I choose to conduct my work in a manner consistent with principles of democracy, privacy, and human rights.</p>
   </div>
 
 </div>
