Use Word-based CV

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@ layout: default
   <img src="/assets/headshot.jpg" alt="headshot" width="150" height="150" id="headshot"/>
   <div id="contact">
     <h2>Contact</h2>
-    <table class="invisible-table">
-      <!-- Email obfuscated using http://www.wbwip.com/wbw/emailencoder.html -->
-      <tr><td>Email</td><td><a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a></td></tr>
-      <tr><td>GitHub</td><td><a href="https://github.com/mattdutson">mattdutson</a></td></tr>
-    </table>
+    <!-- Email obfuscated using http://www.wbwip.com/wbw/emailencoder.html -->
+    <p><a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a></p>
+    <p><a href="https://github.com/mattdutson">github.com/mattdutson</a></p>
   </div>
 
   <div id="summary">
