--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ layout: default
 
 <div class="home">
 
-  <img src="/assets/headshot.jpg" alt="headshot" width="150" height="150" id="headshot"/>
+  <img src="/assets/headshot.jpg" alt="headshot" width="120" height="120" id="headshot"/>
   <div id="contact">
     <h2>Contact</h2>
     <!-- Email obfuscated using http://www.wbwip.com/wbw/emailencoder.html -->
-    <p><a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a></p>
-    <p><a href="https://github.com/mattdutson">github.com/mattdutson</a></p>
+    <a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a><br/>
+    <a href="https://github.com/mattdutson">github.com/mattdutson</a>
   </div>
 
   <div id="summary">
