--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
   <div id="summary">
     <h2>Summary</h2>
 
-    <p>Since 2018 I've been a student in the computer science MS/PhD program at the University of Wisconsin-Madison. My interests include computer vision, computer graphics, and machine learning. Since fall 2019 I've been advised by Mohit Gupta. My current research is in single-photon sensing (SPADs) and spiking neural networks.</p>
+    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, computer graphics, and machine learning. My current research is in single-photon sensing (SPADs) and spiking neural networks.</p>
     
     <p>I believe that computer science has great potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I choose to conduct my work in a manner consistent with principles of democracy, privacy, and human rights.</p>
   </div>
