--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ layout: default
   <div id="summary">
     <h2>Summary</h2>
 
-    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, computer graphics, and machine learning. My current research is in single-photon sensing (SPADs) and spiking neural networks.</p>
+    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, computer graphics, and machine learning. My current research is in single-photon sensing and event-based neural networks.</p>
     
-    <p>I believe that computer science has great potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I choose to conduct my work in a manner consistent with principles of democracy, privacy, and human rights.</p>
+    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with principles of democracy, privacy, and human dignity. I have written some of my thoughts on ethical research <a href="/ethics">here</a>.</p>
   </div>
 
 </div>
