Revert "Update index.html"
This reverts commit f7222e445db99a6533a1adbf31cb76f869aeb0b7.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 
     <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, computer graphics, and machine learning. My current research is in single-photon sensing and event-based neural networks.</p>
     
-    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with principles of democracy, privacy, and human dignity. I have written some of my musings on ethical research <a href="/ethics">here</a>.</p>
+    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with principles of democracy, privacy, and human dignity. I have written some of my thoughts on ethical research <a href="/ethics">here</a>.</p>
   </div>
 
 </div>
