--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ layout: default
   <div id="summary">
     <h2>Summary</h2>
 
-    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, computer graphics, and machine learning. My current research is in single-photon sensing and event-based neural networks.</p>
-    
-    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with principles of democracy, privacy, and human dignity.<!--  I have written some of my thoughts on ethical research <a href="/ethics">here</a>. --></p>
+    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, machine learning, and computer graphics. My current research is in efficient video processing, sparse neural networks, and single-photon sensing.</p>
+
+    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with the values of democracy, privacy, and human dignity.</p>
   </div>
 
 </div>
