--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 
     <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, machine learning, and computer graphics. My current research is in efficient video processing, sparse neural networks, and single-photon sensing.</p>
 
-    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with the values of democracy, privacy, and human dignity.</p>
+    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with values of democracy, privacy, and human dignity.</p>
   </div>
 
 </div>
