--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@ layout: default
 
 <div class="home">
 
-  <img src="/assets/headshot.jpg" alt="headshot" width="120" height="120" id="headshot"/>
+  <img src="/assets/headshot.png" alt="headshot" width="160" height="160" id="headshot"/>
   <div id="contact">
-    <h2>Contact</h2>
+    <h2>Links</h2>
     <!-- Email obfuscated using http://www.wbwip.com/wbw/emailencoder.html -->
     <a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a><br/>
-    <a href="https://github.com/mattdutson">github.com/mattdutson</a>
+    <a href="https://github.com/mattdutson">GitHub</a><br/>
+    <a href="https://wisionlab.com">Lab Homepage</a>
   </div>
 
   <div id="summary">
     <h2>Summary</h2>
 
-    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, machine learning, and computer graphics. My current research is in efficient video processing, sparse neural networks, and single-photon sensing.</p>
+    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, machine learning, and computer graphics. My current research involves efficient video processing, sparse neural networks, and single-photon sensing.</p>
 
     <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with values of democracy, privacy, and human dignity.</p>
   </div>
