--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
   <div id="contact">
     <h2>Links</h2>
     <!-- Email obfuscated using http://www.wbwip.com/wbw/emailencoder.html -->
-    <a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a><br/>
     <a href="https://github.com/mattdutson">GitHub</a><br/>
-    <a href="https://wisionlab.com">Lab Homepage</a>
+    <a href="https://wisionlab.com">Lab Site</a>
+    <a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a><br/>
   </div>
 
   <div id="summary">
