--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: default
     <h2>Links</h2>
     <!-- Email obfuscated using http://www.wbwip.com/wbw/emailencoder.html -->
     <a href="https://github.com/mattdutson">GitHub</a><br/>
-    <a href="https://wisionlab.com">Lab Site</a>
-    <a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a><br/>
+    <a href="https://wisionlab.com">Lab Site</a><br/>
+    <a href="mailto:&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;">&#100;&#117;&#116;&#115;&#111;&#110;&#064;&#119;&#105;&#115;&#099;&#046;&#101;&#100;&#117;</a>
   </div>
 
   <div id="summary">
