--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ layout: default
   <div id="summary">
     <h2>Summary</h2>
 
-    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, machine learning, and computer graphics. My current research involves efficient video processing, sparse neural networks, and single-photon sensing.</p>
+    <p>I am a computer science PhD student at the University of Wisconsin-Madison. I am advised by Mohit Gupta. Broadly, my research interests include computer vision, machine learning, and computer graphics. My current research involves event-based neural networks and single-photon sensors.</p>
 
-    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with values of democracy, privacy, and human dignity.</p>
+    <p>I believe that computing has enormous potential to improve the human condition. Unfortunately, technology can also concentrate power and threaten democratic institutions. I strive to make my research consistent with humanistic and democratic values.</p>
   </div>
 
 </div>
